# chronos

./: .dockerignore  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
.cursor/rules/: alembic-migrations.mdc  chronos-overview.mdc  docs-starlight.mdc  python-backend.mdc
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx  intro.md
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 2026-04-03_12-00-00_create_users_table.py
scripts/: create_enviroment_setup.sh  create_migration.sh
src/: Dockerfile  main.py
src/configs/: __init__.py  auth_settings.py  database_settings.py
src/core/middlewares/: __init__.py  tracer.py
src/core/routers/: __init__.py
src/core/routers/user/: __init__.py  dependencies.py  router.py
src/core/schemas/: __init__.py  user.py
src/domain/exceptions/: __init__.py  user.py
src/domain/models/: __init__.py  base.py  user.py
src/domain/repositories/: user.py
src/domain/services/: user.py
src/infrastructure/database/: __init__.py  session.py
src/infrastructure/database/repositories/: __init__.py  user.py
src/utlis/: logger.py
