[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronos"
version = "1.0.0"
description = "Chronos Project"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "cmtabr" }]
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email,timezone]>=2.12.5",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.48",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["core", "domain", "infrastructure"]

[tool.ruff.format]
quote-style = "double"
